--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./index.css" rel="stylesheet">
     <title>mimimimimi</title>
     <script>
       const mimimimimifyString = (string) => {
@@ -23,7 +24,7 @@
     </script>
   </head>
   <body>
-    <h2>mimimimimify a sentence</h2>
+    <h2 class="text-3xl font-bold underline">mimimimimify a sentence</h2>
     <textarea id="input" rows="10" cols="70" onChange="mimimimimifyString(this.value)"></textarea>
     <br>
     <button
